# wikistxr

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  package-lock.json  package.json  tsconfig.demo.json  tsconfig.json  vite.config.demo.ts  vite.config.iife.ts  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
demo/: index.html  main.ts
src/: lib.rs  tokenizer.rs  utils.rs
src/demo/: index.html  main.ts
src/lib/: constants.ts  editor.ts  highlighter.ts  index.ts  parsers.ts  tokenizer.ts  types.ts  utils.ts
tests/: highlighter.spec.ts  parsers.spec.ts  tokenizer.spec.ts
