[package]
name	= "wikistxr"
version = "0.1.1"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
regex = { version = "1.12", default-features = false, features = ["std", "perf"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
